mdapipkg/objects/Patient__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <label>age</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>