mdapipkg/objects/Patient__c/fields/Average_Cycle_Length__c.field-meta.xml
<CustomField>
    <fullName>Average_Cycle_Length__c</fullName>
    <formula>IF(Cycle_Count__c &gt; 0, Total_Cycle_Days__c / Cycle_Count__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cycle Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>