mdapipkg/objects/Patient__c/fields/Consent_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Consent_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Accepted</label>
    <type>Checkbox</type>
</CustomField>