mdapipkg/objects/Patient__c/fields/Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Count__c</fullName>
    <label>Cycle Count</label>
    <summaryForeignKey>Cycle_Record__c.Patient__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>