mdapipkg/objects/Patient__c/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <label>Medical Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>