mdapipkg/objects/Patient__c/fields/Primary_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>