mdapipkg/objects/Patient__c/fields/Total_Cycle_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Cycle_Days__c</fullName>
    <label>Total Cycle Days</label>
    <summarizedField>Cycle_Record__c.Length__c</summarizedField>
    <summaryForeignKey>Cycle_Record__c.Patient__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>