mdapipkg/objects/Patient__c/validationRules/Patient_Age_Matches_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Age_Matches_DOB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Date_of_Birth__c)),
  NOT(ISBLANK(age__c)),
  FLOOR( (TODAY() - Date_of_Birth__c) / 365 ) &lt;&gt; age__c
)</errorConditionFormula>
    <errorDisplayField>age__c</errorDisplayField>
    <errorMessage>Age does not match Date of Birth.</errorMessage>
</ValidationRule>