mdapipkg/objects/Patient__c/validationRules/Patient_Avg_Cycle_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Avg_Cycle_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Average_Cycle_Length__c ) ),
  Average_Cycle_Length__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Average Cycle Length must be greater than 0.</errorMessage>
</ValidationRule>