mdapipkg/objects/Patient__c/validationRules/Patient_Consent_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Consent_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Consent_Accepted__c = TRUE,
  ISBLANK( Consent_Date__c )
)</errorConditionFormula>
    <errorMessage>Consent Date is required when Consent Accepted = True.</errorMessage>
</ValidationRule>