mdapipkg/objects/Patient__c/validationRules/Patient_DOB_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_DOB_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Date_of_Birth__c ) ),
  Date_of_Birth__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>